--- a/MachineTest/appsettings.json
+++ b/MachineTest/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MTContext": "Data Source=172.16.2.30\\Development;Initial Catalog=MTest;User ID=sa; Password=India@123"
+    "MTContext": "Data Source=;Initial Catalog=MTest;User ID=sa; Password="
   },
   "Logging": {
     "LogLevel": {
