--- a/MachineTest/appsettings.Development.json
+++ b/MachineTest/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MTContext": "Data Source=DESKTOP-OMVNCTT\\SQLEXP2016;Initial Catalog=MTest;User ID=sa; Password=India@123"
+    "MTContext": "Data Source=;Initial Catalog=MTest;User ID=sa; Password="
   },
   "Logging": {
     "LogLevel": {
